--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "node pack.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "@fortawesome/vue-fontawesome": "^0.1.2",
+    "connect-history-api-fallback": "^1.5.0",
+    "express": "^4.16.4",
+    "serve-static": "^1.13.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vux": "^2.9.2"
